[Fix] 예약 수명주기 정합성 강화 — 요청별 hold 토큰·Lua 원자 해제·확정 계약 고정·행 잠금 직렬화 (#5)
* [Fix] 예약 hold 소유권을 요청별 토큰으로 식별하고 Lua로 원자 해제

- Reservation에 holdToken 컬럼 추가, 상태별 불변식을 CHECK 제약에 고정
  (PENDING: non-null / RESERVED·CANCELLED: null)
- Redis 날짜 hold 값을 memberId에서 생성 요청별 UUID holdToken으로 교체
- GET→비교→DEL 비원자 해제를 Lua compare-and-delete 스크립트로 원자화
  (비교와 삭제 사이 TTL 만료·재선점 개입 제거)
- 생성 시 단일 expiresAt을 정해 DB pendingExpiresAt·날짜 hold·alarm이
  같은 deadline을 사용하도록 통일
- confirm·cancel·만료 listener·sweeper가 예약의 holdToken으로 해제하고
  상태 전이 시 토큰을 비우도록 정리

* [Fix] 예약 확정 계약을 저장된 기간으로 고정하고 만료 PENDING 확정 차단

- ReservationConfirmRequestDTO를 공용 ReservationInfoDTO에서 분리해
  personCnt·isFarm만 받도록 변경 (startDate/endDate 제거)
- confirm은 요청 날짜를 받지 않고 create에서 확정한 원래 기간으로만
  잠금·점유 생성·release 수행
- ReservationRepository.findByIdForUpdate(PESSIMISTIC_WRITE) 추가로
  같은 예약의 수명주기 전이를 행 잠금으로 직렬화
- 잠금 후 최신 pendingExpiresAt으로 만료 판정 — 지난 PENDING은
  ResourceGoneException(410)으로 거부하고 ReservationDay를 만들지 않음
- confirm 전용으로만 쓰이던 assertDatesPairOrNone 제거

* [Fix] 정상 release를 커밋 이후로 미루고 수명주기 전이를 행 잠금으로 직렬화

- ReservationHoldReleaseEvent + AFTER_COMMIT 리스너 도입: confirm·cancel·
  만료 회수의 Redis hold·alarm 정리를 DB 커밋 이후에만 실행 (롤백 시 hold 유지)
- create는 트랜잭션 동기화로 보상: 롤백 시 이번 토큰의 hold 정리,
  정상 커밋 후에만 같은 deadline으로 alarm 등록 (커밋 시점 실패까지 포괄).
  saveAndFlush로 영속성 오류를 조기에 표면화
- cancel도 findByIdForUpdate로 행 잠금 후 최신 상태 판정
- PendingExpiryProcessor 신설: 리스너·스위퍼 공통으로 예약 행을 잠그고
  최신 상태·deadline을 재검증한 뒤 회수 (confirm이 먼저 확정했으면 no-op)
- 스위퍼는 후보 ID만 조회하고 항목별 새 트랜잭션으로 처리해 일괄 잠금 회피

* [Test] hold 토큰 Lua 원자 해제 검증 — 소유 토큰·부분 롤백·ABA

DateHoldServiceRedisTest (실 Redis 기준):
- 토큰 일치 → 삭제 1 / 불일치 → 키 유지 / 키 없음 → no-op / null 토큰 → no-op
- 부분 acquire 실패 시 이번 토큰으로 잡은 키만 롤백, 경쟁자 키는 유지
- ABA: 이전 세대 토큰 A의 release가 재선점한 새 세대 B의 hold를 삭제하지 않음

* [Test] 예약 수명주기 정합성 통합 검증 — 확정 계약·deadline·점유 투영

ReservationLifecycleIntegrationTest (실 MySQL·Redis, AFTER_COMMIT 검증 위해 비-트랜잭션):
- confirm 요청 DTO에 날짜 필드 없음 (personCnt·isFarm만)
- create: 단일 deadline(now+10분), PENDING holdToken 보유, hold 값==토큰